# macro-macro

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: cfg.rs  derive.rs
